Changelog
=========

2.0b4 (2010-11-10)
------------------

* Added French translations

2.0b3 (2010-10-21)
------------------

* Updated readme and manual

2.0b2 (2010-10-20)
------------------

* First public release