@@ -1,7 +1,7 @@
 Developer Manual
 ================
 
-Note: You find a developer manual for raptus.article at 
+Note: You find a developer manual for raptus.article at
 `raptus.article.core <http://pypi.python.org/pypi/raptus.article.core>`_.
 Please have look there if you need more information.
 
@@ -17,12 +17,17 @@ file: interfaces.py
     - getImages - Function (Returns a list of images based on the criteria passed as kwargs (catalog brains))
 
 - IImage (Handler for image thumbing and captioning)
-    - getImageURL - Function (Returns the url to the image in the specific size. The sizes are taken from the 
+    - getImageURL - Function (Returns the url to the image in the specific size. The sizes are taken from the
       raptus_article properties sheet and are formed by the following name schema: images_<size>_(height|width)
-    - getImage - Function (Returns the html tag of the image in the specific size. The sizes are taken from the 
+      If the ``images_<size>_scale`` property is set, the corresponding plone.app.imaging scale is used.
+    - getImage - Function (Returns the html tag of the image in the specific size. The sizes are taken from the
       raptus_article properties sheet and are formed by the following name schema: images_<size>_(height|width)
+      If the ``images_<size>_scale`` property is set, the corresponding plone.app.imaging scale is used.
     - getSize - Function (Returns the width and height registered for the specific size)
+      If the ``images_<size>_scale`` property is set, it returns the actual size of the scaled image
     - getCaption - Function (Returns the caption for the image)
+    - getScale - Function (Returns the plone.app.imaging scale to use if the property images_<size>_scale is set.
+      (note: this overwrites height and width)
 
 Schema extender
 ---------------
