@@ -4,11 +4,11 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="raptus.article">
-      
+
     <include package="raptus.article.core" />
     <include package="archetypes.schemaextender" />
     <include package="plone.app.imaging" />
-    
+
     <five:registerPackage package="." />
 
     <!-- Register the installation GenericSetup extension profile -->
@@ -19,24 +19,26 @@
       description=""
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
-      
+
     <adapter
       factory=".images.Images" />
-      
+
     <adapter
       factory=".images.Image" />
-    
+
     <adapter
       factory=".extender.ImageExtender"
       name="raptus.article.images" />
-             
-    <adapter 
+
+    <adapter
       factory=".extender.Index"
       name="component" />
-             
-    <adapter 
+
+    <adapter
       factory="raptus.article.core.componentselection.ComponentSelectionDefault"
       for=".extender.IATImage"
       name="components" />
+
+     <include package=".upgrades" />
 
 </configure>
