@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>10</version>
+  <version>11</version>
   <dependencies>
     <dependency>profile-raptus.article.core:default</dependency>
   </dependencies>
