@@ -3,7 +3,9 @@
  <object name="raptus_article" meta_type="Plone Property Sheet" purge="False">
   <property name="images_thumb_width" type="int" purge="False">100</property>
   <property name="images_thumb_height" type="int" purge="False">0</property>
+  <property name="images_thumb_scale" type="string" purge="False"></property>
   <property name="images_popup_width" type="int" purge="False">600</property>
   <property name="images_popup_height" type="int" purge="False">500</property>
+  <property name="images_popup_scale" type="string" purge="False"></property>
  </object>
 </object>
