@@ -1,6 +1,17 @@
 Changelog
 =========
 
+
+(unreleased)
+------------
+
+* Add properties ``images_*_scale`` to be able to use `plone.app.imaging`
+  scales instead of the raptus.article image sizes.
+
+  This allows us to use `plone.app.imagecropping`__ [fRiSi]
+
+  .. __: https://pypi.python.org/pypi/plone.app.imagecropping
+
 2.0b4 (2010-11-10)
 ------------------
 
